--- a/package.json
+++ b/package.json
@@ -10,14 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google-cloud/vision": "^5.3.0",
     "@types/node": "^20.0.0",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "katex": "^0.16.22",
     "lucide-react": "^0.344.0",
+    "multer": "^2.0.1",
+    "openai": "^5.9.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-katex": "^3.1.0",
     "react-markdown": "^10.1.0",
+    "sharp": "^0.34.3",
     "tesseract.js": "^6.0.1"
   },
   "devDependencies": {
