WIP: Debug multi-question docx upload, add fallback splitting, logging, and frontend debug. Backend and frontend in sync with current state.

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^5.1.0",
     "katex": "^0.16.22",
     "lucide-react": "^0.344.0",
+    "mammoth": "^1.9.1",
     "multer": "^2.0.1",
     "openai": "^5.9.0",
     "prop-types": "^15.8.1",
